<resources>
    <string name="app_name">AutismDetection</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_detection">Detection Austism</string>
    <string name="title_profile_account">Profile Account</string>
    <string name="copyright">Made for Capstone Project\nBangkit 2022</string>
    <string name="title_project">Austism\nDetector\nApp</string>
    <string name="hello">Hello,</string>
    <string name="our_service">Our Service</string>
    <string name="detection_naustism">Detection\nAustism</string>
    <string name="nearby_ntherapy">Nearby\nTherapy</string>
    <string name="consultation">Consultation</string>
    <string name="coming_nsoon">Coming\nSoon</string>
    <string name="change_language">Change Language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="desc_profile">Place that you can manage your profile</string>
    <string name="profile_user">Profile User</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>