<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstoneproject.autismdetection.ui.home.homepage.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.capstoneproject.autismdetection.ui.home.homepage.detection.DetectionFragment"
        android:label="@string/title_detection"
        tools:layout="@layout/fragment_detection" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstoneproject.autismdetection.ui.home.homepage.profile.ProfileFragment"
        android:label="@string/title_profile_account"
        tools:layout="@layout/fragment_profile" />
</navigation>